# youbot_499

./: CMakeLists.txt  README.md  package.xml
cfg/: cmd_veldynamic.cfg  lscan_angle_filter.cfg  youbot_circle_pid.cfg
include/youbot_499/: arm_interface.h  arm_interface_youbot.h
launch/: lscan_launch.launch  youbot_demo_circle.launch  youbot_demo_circle_witharm.launch  youbot_gazebo_angle_filter.launch  youbot_gazebo_circle.launch  youbot_gazebo_move.launch
rviz/: angle_filter.rviz
scripts/: cropbox_control.py
src/: arm_interface.cpp  arm_interface_youbot.cpp  cropbox_dynamic.cpp  lscan_angle_filter.cpp  youbot_circle.cpp  youbot_vel_dynamic.cpp
